# Contejner

./: CMakeLists.txt
qclient/: CMakeLists.txt  generate-interfaces.sh  main.cpp  qcontainerprocess.cpp  qcontainerprocess.h
